fix filter and sort by elements on small screens

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -208,6 +208,7 @@
   font-size: 14px;
   text-transform: none;
   letter-spacing: unset;
+  margin-right: 16px;
   & .material-icons {
     @include icon-margin-right;
     font-size: 18px;
