--- a/src/styles/components/_page-search.scss
+++ b/src/styles/components/_page-search.scss
@@ -75,7 +75,7 @@
   position: relative;
   display: inline-block;
   box-sizing: border-box;
-  margin-left: 16px;
+  margin-top: 16px;
 }
 
 .select__sort__control > .material-icons {
